# procgame

./: .gitignore  CMakeLists.txt  COPYING.txt  Makefile  README.md  bork_map  build.sh  options.txt
src/: handle_crash.h  linmath.h  main.c
src/BORK_of_DOOM/: bork.c  bork.h  bullet.c  bullet.h  datapad_content.h  enemy_tick.c  entity.c  entity.h  game_effects.c  game_states.h  item_use_funcs.c  map_area.c  map_area.h  map_object.h  particle.h  physics.c  physics.h  play_datapads.c  play_game_menu.c  play_intro.c  play_inventory.c  play_menu_doorpad.c  play_misc.c  play_outro.c  play_recycler.c  play_upgrades.c  recycler.h  state_edit.c  state_menu.c  state_play.c  state_play.h  tinyfiles.h  upgrades.c  upgrades.h
src/game/: game.c  game.h  game_example.c  game_example.h  game_fps.c  game_fps.h  game_state.c  game_state.h  ring.h
src/procgl/: 2d_frag.glsl  2d_vert.glsl  3d_frag.glsl  arr.h  audio.c  audio.h  bitwise.h  data_type.h  gbuffer.c  gbuffer.h  heightmap.c  heightmap.h  htable.h  marching_cubes.c  model.c  model.h  model_frag.glsl  model_prims.c  model_unwrap.c  model_vert.glsl  noise1234.c  post_frag.glsl  post_sine_frag.glsl  postproc.c  postproc.h  procgl.c  procgl.h  procgl_base.c  procgl_base.h  readme_wave.md  renderer.c  renderer.h  sdf.c  sdf.h  sdf_functions.c  sdf_keywords.gperf  shader.c  shader.h  shader_2d.c  shader_3d.c  (+15 more)
src/shaders/: 3d_frag.glsl  3d_vert.glsl  deferred_frag.glsl  deferred_vert.glsl  post_sine_vert.glsl  screen_frag.glsl  shader_2d.c  shader_3d.c  shader_text.c  shaders.h  text_frag.glsl  text_vert.glsl
(+39 files in other folders)
